layout bug fixes (#102)
* fix contact details layout
* fix download link layout
* fixes layout of inline pdf link
* fixes closed season award winner message styling

--- a/app/assets/stylesheets/frontend/views/award_form.scss
+++ b/app/assets/stylesheets/frontend/views/award_form.scss
@@ -285,7 +285,7 @@ select.read-only {
     background-position: center;
 
     position: absolute;
-    left: -20px;
+    left: -22px;
     top: 10px;
   }
 
@@ -315,10 +315,18 @@ select.read-only {
 }
 
 .download-pdf-link {
-  margin: 0.25em 0 0;
+  margin: 0 1em 0;
   font-size: 1.25em;
 
   svg {
     margin-right: 0.5em;
+  }
+}
+
+.inline-link {
+  &:before {
+    display: inline-block;
+    position: relative;
+    top: 2px;
   }
 }
